<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		group_1
	 *	@date 		Tuesday 16th of January 2024 02:00:32 PM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/screen1" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_screen1_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__screen1_ek2"
					android:background="@drawable/_bg__screen1_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="800dp" />

				<ImageView android:id="@+id/vector"
					android:src="@drawable/vector"
					android:contentDescription="vector"
					 android:layout_marginStart="299dp"
					android:layout_marginTop="19dp"
					android:layout_width="25dp"
					android:layout_height="12.5dp" />


				<RelativeLayout android:id="@+id/battery_full"
					android:layout_marginTop="10dp"
					android:layout_marginStart="324dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__battery_full_ek1"
						android:background="@drawable/_bg__battery_full_ek1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="25dp"
						android:layout_height="25dp" />

				</RelativeLayout>

				<ImageView android:id="@+id/vector_ek1"
					android:src="@drawable/vector_ek1"
					android:contentDescription="vector_ek1"
					 android:layout_marginStart="265dp"
					android:layout_marginTop="14dp"
					android:layout_width="25dp"
					android:layout_height="17.5dp" />


				<RelativeLayout android:id="@+id/wifi"
					android:layout_marginTop="448dp"
					android:layout_marginStart="177dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__wifi_ek1"
						android:background="@drawable/_bg__wifi_ek1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="25dp"
						android:layout_height="25dp" />

				</RelativeLayout>

				<TextView android:id="@+id/welcome_onboard"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="24sp"
					android:textColor="@color/_bg__battery_full_ek1_color"
					android:layout_marginLeft="45dp"
					android:layout_marginTop="198dp"
					android:layout_width="279.4dp"
					android:layout_height="86.4dp"
					android:text="@string/welcome_onboard_string"
					 />

				<View   android:id="@+id/rectangle_1"
					android:background="@drawable/rectangle_1_shape"
					 android:layout_marginStart="41dp"
					android:layout_marginTop="682dp"
					android:layout_width="277dp"
					android:layout_height="85dp" />

				<TextView android:id="@+id/register"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="20sp"
					android:textColor="@color/register_color"
					android:layout_marginLeft="81dp"
					android:layout_marginTop="682dp"
					android:layout_width="198dp"
					android:layout_height="56dp"
					android:text="@string/register_string"
					 />

				<View   android:id="@+id/rectangle_2"
					android:background="@drawable/rectangle_2_shape"
					 android:layout_marginStart="40dp"
					android:layout_marginTop="319dp"
					android:layout_width="269dp"
					android:layout_height="52dp" />

				<View   android:id="@+id/rectangle_3"
					android:background="@drawable/rectangle_3_shape"
					 android:layout_marginStart="38dp"
					android:layout_marginTop="550dp"
					android:layout_width="269dp"
					android:layout_height="52dp" />

				<View   android:id="@+id/rectangle_4"
					android:background="@drawable/rectangle_4_shape"
					 android:layout_marginStart="38dp"
					android:layout_marginTop="473dp"
					android:layout_width="269dp"
					android:layout_height="52dp" />

				<View   android:id="@+id/rectangle_5"
					android:background="@drawable/rectangle_5_shape"
					 android:layout_marginStart="38dp"
					android:layout_marginTop="396dp"
					android:layout_width="269dp"
					android:layout_height="52dp" />

				<TextView android:id="@+id/enter_your_name"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="16sp"
					android:textColor="@color/_bg__battery_full_ek1_color"
					android:layout_marginLeft="55dp"
					android:layout_marginTop="338dp"
					android:layout_width="236dp"
					android:layout_height="37.6dp"
					android:text="@string/enter_your_name_string"
					 />

				<TextView android:id="@+id/enter_you_number"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="16sp"
					android:textColor="@color/_bg__battery_full_ek1_color"
					android:layout_marginLeft="61dp"
					android:layout_marginTop="415dp"
					android:layout_width="230dp"
					android:layout_height="37.6dp"
					android:text="@string/enter_you_number_string"
					 />

				<TextView android:id="@+id/enter_your_email"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="16sp"
					android:textColor="@color/_bg__battery_full_ek1_color"
					android:layout_marginLeft="64dp"
					android:layout_marginTop="488dp"
					android:layout_width="233dp"
					android:layout_height="36.6dp"
					android:text="@string/enter_your_email_string"
					 />

				<TextView android:id="@+id/enter_your_password"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="16sp"
					android:textColor="@color/_bg__battery_full_ek1_color"
					android:layout_marginLeft="55dp"
					android:layout_marginTop="567dp"
					android:layout_width="251dp"
					android:layout_height="37.6dp"
					android:text="@string/enter_your_password_string"
					 />

				<TextView android:id="@+id/routine_app"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="12sp"
					android:textColor="@color/_bg__battery_full_ek1_color"
					android:layout_marginLeft="42dp"
					android:layout_marginTop="79dp"
					android:layout_width="278.2dp"
					android:layout_height="82.2dp"
					android:text="@string/routine_app_string"
					 />

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>